--- a/src/app/quisommesnous/quisommesnous.component.html
+++ b/src/app/quisommesnous/quisommesnous.component.html
@@ -10,18 +10,22 @@
    <div class="row">
     <div class="col col-md-2"></div>
     <div class="col col-md-8">
-      <article class="all-browser">
-        <p>
-          <strong>L'entreprise d'entrainement (EE)</strong> professionnelle ELAN,
-              dont le promoteur est la Confédération des Entreprises Citoyennes de Tunisie
-              <strong>(CONECT)</strong>,
-              est une entreprise de formation par la pratique ,
-              active au sein d'un réseau international regroupant plus de 5000 entreprises de même type.
-              Nous offrons aux personnes en formation la possibilité de mettre en pratique
-              leurs connaissances et compétences professionnelles, de les actualiser ou de
-              les parfaire dans tous les domaines de l'administration et de la gestion commerciale.
-              Elle est certifiée par le Réseau des Entreprises d'Entrainement de Tunisie REET.
-        </p>
+      <article class="all-browsers">
+        <h1> Qui somme Nous </h1>
+         <article class="browser">
+          <h1></h1>
+            <p>
+              <strong>L'entreprise d'entrainement (EE)</strong> professionnelle ELAN,
+                  dont le promoteur est la Confédération des Entreprises Citoyennes de Tunisie
+                  <strong>(CONECT)</strong>,
+                  est une entreprise de formation par la pratique ,
+                  active au sein d'un réseau international regroupant plus de 5000 entreprises de même type.
+                  Nous offrons aux personnes en formation la possibilité de mettre en pratique
+                  leurs connaissances et compétences professionnelles, de les actualiser ou de
+                  les parfaire dans tous les domaines de l'administration et de la gestion commerciale.
+                  Elle est certifiée par le Réseau des Entreprises d'Entrainement de Tunisie REET.
+           </p>
+          </article>
       </article>
 
 
