--- a/src/app/contenu/contenu.component.html
+++ b/src/app/contenu/contenu.component.html
@@ -44,8 +44,8 @@
             <img src="../../assets/images/Mme Rekik/PM516-01.jpg" alt="Random first slide">
           </div>
           <div class="carousel-caption">
-            <h3>First slide label</h3>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            <h3>Madame Rekik</h3>
+            <p>la choix de la traditionnel</p>
           </div>
         </ng-template>
         <ng-template ngbSlide>
