--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -38,8 +38,8 @@
 
 
   <nav class="navbar navbar-expand-lg navbar-lightsteelblue bg-lightsteelblue">
-    <div class="container">
-      <a class="navbar-brand" href="#">
+    <div class="container-fluid">
+      <a class="navbar-brand logo" href="#">
         <img class="card-img-top img-responsive" src="../../assets/images/logo-Elan.png" alt="logo">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,26 +50,48 @@
 
 
           <li class="nav-item">
-            <input type="text" placeholder="Chercher">
+            <input class="bar_shearch" type="text" placeholder="Chercher">
           </li>
 
 
-          <li class="nav-item actived">
-            <a class="fab fa-facebook-square" aria-hidden="true" style="font-size:60px"></a>
+        <li class="nav-item actived">
+          <a class="dark-grey-text" href="http://www.facebook.com/Elan-by-CONECT-Entreprise-dentrainement-546724438806098" target="_blank">
+            <div class="social_logo">
+              <img src="../../assets/images/L/fb.jpg" alt="ATFP">
+
+            </div>
+          </a>
         </li>
 
 
-          <li class="nav-item actived">
-            <a href="#" class="fab fa-twitter-square" aria-hidden="true" style="font-size:60px" ></a>
-          </li>
+        <li class="nav-item actived">
+          <a class="dark-grey-text" href="http://www.youtube/ELAN byCONECT">
+            <div class="social_logo">
+              <img src="../../assets/images/L/Logo Youtube -03.jpg" alt="ATFP">
 
-          <li class="nav-item actived">
-            <a href="#" class="fab fa-youtube-square" aria-hidden="true" style="font-size:60px"></a>
-          </li>
+            </div>
+          </a>
+        </li>
 
-          <li class="nav-item actived">
-            <a href="#" class="fab fa-linkedin-square" aria-hidden="true" style="font-size:60px"></a>
-          </li>
+        <li class="nav-item actived">
+          <a class="dark-grey-text" href="http://www.linkedin.com/company/elan-by-conect-entreprise-d-entrainement" target="_blank">
+            <div class="social_logo">
+              <img src="../../assets/images/L/Log LinkedIn-04.jpg" alt="ATFP">
+
+            </div>
+          </a>
+        </li>
+
+
+        <li class="nav-item actived">
+          <a class="dark-grey-text" href="http://www.instagram.com/elanbyconect" target="_blank">
+            <div class="social_logo">
+              <img src="../../assets/images/L/Logo Instgrame -02.jpg" alt="ATFP">
+
+            </div>
+          </a>
+        </li>
+
 
 
         </ul>
