--- a/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.html
+++ b/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,6 @@
 <body>
 
 <div class="container">
-
   <div class="row">
 
     <div class="col-lg-4 col-md-6 mb-4">
@@ -25,12 +24,12 @@
               Réf : PM337
               Poids : 70 pièces/Kg
             </strong>
-
         </div>
         <div class="card-footer">
           <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
         </div>
       </div>
+    </div>
     </div>
 
     <div class="col-lg-4 col-md-6 mb-4">
@@ -47,8 +46,6 @@
               Réf : PT131
               Poids : 60 pièces/Kg
             </strong>
-
-
           </div>
         </div>
         <div class="card-footer">
@@ -56,7 +53,8 @@
         </div>
       </div>
     </div>
-    </div>
+
+
     <div class="col-lg-4 col-md-6 mb-4">
       <div class="card h-100">
         <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM165-01.jpg" alt=""></a>
@@ -86,38 +84,6 @@
         <div class="card-body">
           <h4 class="card-title">
             <a href="#">Item Four</a>
-          </h4>
-          <h5>$24.99</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6 mb-4">
-      <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM130-01.jpg" alt=""></a>
-        <div class="card-body">
-          <h4 class="card-title">
-            <a href="#">Item Five</a>
-          </h4>
-          <h5>$24.99</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6 mb-4">
-      <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM 130-01.jpg" alt=""></a>
-        <div class="card-body">
-          <h4 class="card-title">
-            <a href="#">Item Six</a>
           </h4>
           <h5>$24.99</h5>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
