--- a/src/app/contenu/contenu.component.html
+++ b/src/app/contenu/contenu.component.html
@@ -62,8 +62,8 @@
             <img src="../../assets/images/Mme Rekik/PM 130-01.jpg" alt="Random third slide">
           </div>
           <div class="carousel-caption">
-            <h3>Third slide label</h3>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <h3>Madame Rekik</h3>
+            <p>la choix de la traditionnel</p>
           </div>
         </ng-template>
       </ngb-carousel>
@@ -81,8 +81,8 @@
               <img src="../../assets/images/Tunisian Perl/B 0-01.jpg" alt="Random first slide">
             </div>
             <div class="carousel-caption">
-              <h3>First slide label</h3>
-              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              <h3>chez Tunisian perl </h3>
+              <p> </p>
             </div>
           </ng-template>
           <ng-template ngbSlide>
