--- a/src/app/contacteznous/contacteznous.component.css
+++ b/src/app/contacteznous/contacteznous.component.css
@@ -2,6 +2,12 @@
 ** Style Simple Ecommerce Theme for Bootstrap 4
 ** Created by T-PHP https://t-php.fr/43-theme-ecommerce-bootstrap-4.html
 */
+
+body{
+  margin-left: 100px;
+}
+
+
 .bloc_left_price {
   color: #c01508;
   text-align: center;
