--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,3 +1,6 @@
+body{
+max-width: 100%;
+}
 .product_logo > img{
 width: 160px ;
 height:120px ;
@@ -22,4 +25,14 @@ border: goldenrod solid 2px ;
     font-size: larger;
     padding: 2px;
 
+  }
+
+  .elan-diff{
+    text-align: justify;
+    text-justify: inter-word;
+
+  }
+
+  .text-center{
+    padding-left:100px;
   }
