--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -84,10 +84,11 @@
                     <!-- Content -->
                     <h6 class="text-uppercase font-weight-bold">Company name</h6>
                     <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                    <p>
+                    <p class="elan-diff">
                       L'entreprise d'entrainement (EE) professionnelle ELAN, dont le promoteur est la Confédération des Entreprises Citoyennes de Tunisie (CONECT), est une entreprise de formation par la pratique ,active au sein d'un réseau international regroupant plus de 5000 entreprises de même type.
                        Nous offrons aux personnes en formation la possibilité de mettre en pratique leurs connaissances et compétences professionnelles, de les actualiser ou de les parfaire dans tous les domaines de l'administration et de la gestion commerciale.
-                      Elle est certifiée par le Réseau des Entreprises d'Entrainement de Tunisie REET.</p>
+                      Elle est certifiée par le Réseau des Entreprises d'Entrainement de Tunisie REET.
+                    </p>
 
                 </div>
                 <!-- Grid column -->
@@ -99,13 +100,13 @@
                     <h6 class="text-uppercase font-weight-bold">Products</h6>
                     <hr class="teal accent-3 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
-                        <a class="dark-grey-text" href="#!">Madame Rekik</a>
+                        <a class="dark-grey-text" href="https://www.patisserie-rekik.com">Madame Rekik</a>
                     </p>
                     <div class="product_logo">
                     <img src="../../assets/images/Mme Rekik/rekik.JPG" alt="Madame Rekik" >
                     </div>
                     <p>
-                        <a class="dark-grey-text" href="#!">Tunnisian Perl</a>
+                        <a class="dark-grey-text" href="http://www.tunisianpearl.tn">Tunnisian Pearl</a>
                     </p>
                     <div class="product_logo">
                       <img src="../../assets/images/Tunisian Perl/perl.JPG" alt="Tunisian Perl">
