--- a/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.html
+++ b/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.html
@@ -15,10 +15,10 @@
         <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM337-01.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Yasmina</a>
+            <a href="#"><strong class="etiquette"> Yasmina</strong></a>
           </h4>
           <h5>$75</h5>
-          <p class="card-text"> <strong style="color:darkseagreen; font-size: 20px; " >Les Ingédiants </strong>Pistach, Amande, Sucre, Sirop de glucose</p>
+          <p class="card-text"> <strong style="color:darkseagreen; " >Les Ingédiants </strong>Pistach, Amande, Sucre, Sirop de glucose</p>
           <div style="width: 100px;  padding-top:10px; padding-bottom:10px;border: 3px solid teal; text-align: center;background: #C0C0C0;">
             <strong>
               Réf : PM337
@@ -37,10 +37,10 @@
         <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM130-01.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Bjewia Fakia</a>
+            <a href="#"><strong class="etiquette"> Bjewia Fakia</strong></a>
           </h4>
           <h5>$59</h5>
-          <p class="card-text"><strong style="color:darkseagreen; font-size: 20px; " >Les Ingédiants </strong>Amande, Noisette, Sirop de sucre, Sirop de glucose</p>
+          <p class="card-text"><strong style="color:darkseagreen;" >Les Ingédiants </strong>Amande, Noisette, Sirop de sucre, Sirop de glucose</p>
           <div style="width: 120px;  padding-top:10px; padding-bottom:10px;border: 3px solid teal; text-align: center;background: #C0C0C0;">
             <strong>
               Réf : PT131
@@ -57,13 +57,13 @@
 
     <div class="col-lg-4 col-md-6 mb-4">
       <div class="card h-100">
-        <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM165-01.jpg" alt=""></a>
+        <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PT101-01.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Samsa Amande Noisette</a>
+            <a href="#"><strong class="etiquette"> Samsa Amande Noisette </strong></a>
           </h4>
           <h5>$58</h5>
-          <p class="card-text"><strong style="color:darkseagreen; font-size: 20px; " >Les Ingédiants </strong>Amande, Noisette, Sucre glace, Beurre, Feulle de brick, Sirop de sucre</p>
+          <p class="card-text"><strong style="color:darkseagreen; " >Les Ingédiants </strong>Amande, Noisette, Sucre glace, Beurre, Feulle de brick, Sirop de sucre</p>
           <div style="width: 120px;  padding-top:10px; padding-bottom:10px;border: 3px solid teal; text-align: center;background: #C0C0C0;">
             <strong>
               Réf : PT131
@@ -83,7 +83,7 @@
         <a href="#"><img class="card-img-top" src="../../../../assets/images/Mme Rekik/PM159-01.jpg" alt=""></a>
         <div class="card-body">
           <h4 class="card-title">
-            <a href="#">Item Four</a>
+            <a href="#"><strong class="etiquette"> Item Four</strong></a>
           </h4>
           <h5>$24.99</h5>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
