--- a/src/app/contenu/contenu.component.html
+++ b/src/app/contenu/contenu.component.html
@@ -35,7 +35,7 @@
 
 
 <!-- contenu a droit-->
- <div class="container">
+ <div class="container-fluid">
   <div class="row">
     <div class="col-5">
       <ngb-carousel class="carro-custum">
