--- a/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.css
+++ b/src/app/produits/patisssiers/patissiers-list/patissiers-list.component.css
@@ -1,3 +1,18 @@
 body{
  background-color: white;
+ margin-left: 100px;
+}
+
+.card-img-top{
+  width:200px;
+  height:200px;
+}
+
+.card-text{
+ font-size: small;
+}
+
+
+.etiquette{
+color: orange;
 }
